--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "train": "nodemon train.js",
+    "train": "node train.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Akhmadjon",
